fix(select): Align multiple select top margin with default select variant - FRONT-1843 (#1806)

--- a/src/implementations/vanilla/components/form/form.scss
+++ b/src/implementations/vanilla/components/form/form.scss
@@ -40,7 +40,8 @@
     margin-top: map.get(spacing.$spacing, 's');
   }
 
-  > *:not(.ecl-form-label--hidden) + .ecl-select__container {
+  > *:not(.ecl-form-label--hidden) + .ecl-select__container,
+  > *:not(.ecl-form-label--hidden) + .ecl-select__multiple {
     margin-top: map.get(spacing.$spacing, 's');
   }
 
